Skoki pomiędzy pytaniami - początek

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -13,7 +13,7 @@
     <string name="quest15">15. How severe is the numbness (compared to stages of a dental injection wearing off)?</string>
     <string name="quest16">16. How painful is it to touch this area of numbness?</string>
     <string name="quest17">17. What degree of burning or other altered sensation do you have on the same side of your face as the operation site?</string>
-    <string name="quest18">18. Did the operation result in any hearing loss?</string>
+    <string name="quest18">18. Did the operation result in any hearing loss? How severe?</string>
     <string name="quest19">19.Has the hearing loss changed in any way?</string>
     <string name="quest20">20. Do you feel unsteady on your feet as a result of the operation?</string>
     <string name="quest21">21. Do you suffer from more dizziness than usual following this operation?</string>
@@ -37,4 +37,71 @@
     <string name="quest8">8. Where is the pain?</string>
     <string name="quest9">9. Do any of these activities set the pain off?</string>
     <string name="yes">Yes</string>
+    <string name="acupuncture">Acupuncture</string>
+    <string name="after_1_6">1-6 months after</string>
+    <string name="after_7_12">7-12 months after</string>
+    <string name="baloon_compression">Balloon compression</string>
+    <string name="bits_floating">Bits floating</string>
+    <string name="blurred">Blurred</string>
+    <string name="brushing_teeth">Brushing teeth</string>
+    <string name="chewing_food">With chewing food</string>
+    <string name="cold">Cold</string>
+    <string name="controlling_dentures">With controlling dentures</string>
+    <string name="cryosurgery">Cryosurgery</string>
+    <string name="daily">Daily</string>
+    <string name="days">Days</string>
+    <string name="different_area">Different area than before operation</string>
+    <string name="dribbling">With dribbling</string>
+    <string name="dull_achy">It is dull / achy now</string>
+    <string name="eating">Eating</string>
+    <string name="excessive_bitting">With excessive bitting of cheek</string>
+    <string name="eye_infection">Eye infection</string>
+    <string name="eyes_not_focus">Eyes do not focus well</string>
+    <string name="gamma_knife">Gamma knife</string>
+    <string name="getting_worse">It\'s getting worse</string>
+    <string name="glycerol_injection">Glycerol injection</string>
+    <string name="hours">Hours</string>
+    <string name="immediately">Immediately</string>
+    <string name="laser">Laser</string>
+    <string name="lasted_1_6_gone">Lasted 1-6 months but now it\'s gone</string>
+    <string name="lasted_6_more_gone">Lasted 6+ months but now it\'s gone</string>
+    <string name="later_10_years">Over 10 years later</string>
+    <string name="later_1_2_months">1-2 months later</string>
+    <string name="later_1_2_years">1-2 years later</string>
+    <string name="later_3_4_years">3-4 years later</string>
+    <string name="later_3_5_months">3-5 months later</string>
+    <string name="later_5_6_years">5-6 years later</string>
+    <string name="later_6_7_years">6-7 years later</string>
+    <string name="later_6_more_months">6 or more months later</string>
+    <string name="later_8_9_years">8-9 years later</string>
+    <string name="laughing">Laughing</string>
+    <string name="microvascular">Microvascular decompression</string>
+    <string name="minutes">Minutes</string>
+    <string name="muscule_spasm">With muscules going into spasm</string>
+    <string name="other">"Other: "</string>
+    <string name="rhizotomy">Posterior sensory rhizotomy</string>
+    <string name="right_time">Done at the right time</string>
+    <string name="same_area">Same area as before operation</string>
+    <string name="seconds">Seconds</string>
+    <string name="seeing_double">Seeing double</string>
+    <string name="shooting_less">Still \'shooting\' but less severe</string>
+    <string name="shooting_more">Still \'shooting\' but more severe</string>
+    <string name="should_earlier">Should have done earlier</string>
+    <string name="should_later">Should have done later</string>
+    <string name="should_never">Should have never been done</string>
+    <string name="still_same">It\'s still the same</string>
+    <string name="still_there_improved">It\'s still there, but has improved</string>
+    <string name="talking">Talking</string>
+    <string name="termoregulation">Radiofrequency thermocoagulation</string>
+    <string name="times_week_1_less">Less than 1/week</string>
+    <string name="times_week_2_3">2-3 times a week</string>
+    <string name="touch">Touch</string>
+    <string name="washing_face">Washing face</string>
+    <string name="watering">Watering a lot</string>
+    <string name="weeks">Weeks</string>
+    <string name="wind">Wind</string>
+    <string name="yes_as_needed">Yes, as needed</string>
+    <string name="yes_regularly">Yes, regularly</string>
+    <string name="yes_same">Yes, same than before</string>
+    <string name="yes_worse">Yes, worse than before</string>
 </resources>
