--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,72 @@
 
     <string name="no"/>
     <string name="yes"/>
-    <string name="notSure"/>
+    <string name="yes_as_needed"/>
+    <string name="yes_regularly"/>
+    <string name="yes_worse"/>
+    <string name="yes_same"/>
+    <string name="notSure" />
+    <string name="other"/>
+    <string name="shooting_less"/>
+    <string name="dull_achy"/>
+    <string name="immediately"/>
+    <string name="after_1_6"/>
+    <string name="after_7_12"/>
+    <string name="later_1_2_years"/>
+    <string name="later_3_4_years"/>
+    <string name="later_5_6_years"/>
+    <string name="later_6_7_years"/>
+    <string name="later_8_9_years"/>
+    <string name="later_10_years"/>
+    <string name="later_1_2_months"/>
+    <string name="later_3_5_months"/>
+    <string name="later_6_more_months"/>
+    <string name="seconds"/>
+    <string name="minutes"/>
+    <string name="hours"/>
+    <string name="days"/>
+    <string name="weeks"/>
+    <string name="same_area"/>
+    <string name="different_area"/>
+    <string name="washing_face"/>
+    <string name="brushing_teeth"/>
+    <string name="wind"/>
+    <string name="cold"/>
+    <string name="touch"/>
+    <string name="talking"/>
+    <string name="eating"/>
+    <string name="daily"/>
+    <string name="times_week_2_3"/>
+    <string name="times_week_1_less"/>
+    <string name="lasted_1_6_gone"/>
+    <string name="lasted_6_more_gone"/>
+    <string name="still_there_improved"/>
+    <string name="still_same"/>
+    <string name="getting_worse"/>
+    <string name="chewing_food"/>
+    <string name="controlling_dentures"/>
+    <string name="dribbling"/>
+    <string name="excessive_bitting"/>
+    <string name="muscule_spasm"/>
+    <string name="blurred"/>
+    <string name="bits_floating"/>
+    <string name="eyes_not_focus"/>
+    <string name="seeing_double"/>
+    <string name="watering"/>
+    <string name="eye_infection"/>
+    <string name="right_time"/>
+    <string name="should_earlier"/>
+    <string name="should_later"/>
+    <string name="should_never"/>
+    <string name="microvascular"/>
+    <string name="rhizotomy"/>
+    <string name="termoregulation"/>
+    <string name="glycerol_injection"/>
+    <string name="baloon_compression"/>
+    <string name="gamma_knife"/>
+    <string name="laser"/>
+    <string name="acupuncture"/>
+    <string name="cryosurgery"/>
+    <string name="shooting_more"/>
+    <string name="laughing"/>
 </resources>
