--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -14,7 +14,7 @@
     <string name="quest15">15. Jak silne jest odrętwienie twarzy (w porównaniu do stopni odrętwienia po zastrzyku stomatologicznym)?</string>
     <string name="quest16">16. Jak bolesny jest dotyk odrętwiałego obszaru twarzy?</string>
     <string name="quest17">17. W jakim stopniu odczuwasz uczucie palenia/inne na ostanio operowanej stronie twarzy?</string>
-    <string name="quest18">18. Czy po operacji pojawiła się utrata słuchu?</string>
+    <string name="quest18">18. Czy po operacji pojawiła się utrata słuchu? Jak silna?</string>
     <string name="quest19">19. Czy stopień utraty słuchu uległ zmianie?</string>
     <string name="quest20">20. Czy po operacji czujesz się niepewnie na nogach?</string>
     <string name="quest21">21. Czy cierpisz z powodu mocniejszych zawrotów głowy po ostatniej operacji?</string>
@@ -37,4 +37,71 @@
     <string name="quest7">7. Określ intensywność bólu:</string>
     <string name="quest8">8. Gdzie znajduje się bolące miejsce?</string>
     <string name="quest9">9. Czy któraś z poniższych czynności wywołuje ból?</string>
+    <string name="acupuncture">Akupunktura</string>
+    <string name="after_1_6">1-6 miesięcy przed</string>
+    <string name="after_7_12">7-12 miesięcy przed</string>
+    <string name="blurred">Rozmazanie obrazu</string>
+    <string name="brushing_teeth">Mycie zębów</string>
+    <string name="chewing_food">Żucie jedzenia</string>
+    <string name="cold">Zimno</string>
+    <string name="daily">Codziennie</string>
+    <string name="days">Dni</string>
+    <string name="different_area">Inny obszar niż przed operacją</string>
+    <string name="eating">Jedzenie</string>
+    <string name="eye_infection">Infekcja oka</string>
+    <string name="eyes_not_focus">Niemożliwość dobrego skupienia wzroku</string>
+    <string name="getting_worse">Pogarsza się</string>
+    <string name="hours">Godziny</string>
+    <string name="immediately">Natychmiast</string>
+    <string name="laser">Laser</string>
+    <string name="lasted_1_6_gone">Trwał 1-6 miesięcy. Teraz już go nie ma</string>
+    <string name="lasted_6_more_gone">Trwał ponad 6 miesięcy. Teraz teraz już go nie ma</string>
+    <string name="later_10_years">Ponad 10 lat później</string>
+    <string name="later_1_2_months">1-2 miesiące później</string>
+    <string name="later_1_2_years">1-2 lata później</string>
+    <string name="later_3_4_years">3-4 lata później</string>
+    <string name="later_3_5_months">3-5 miesięcy poźniej</string>
+    <string name="later_5_6_years">5-6 lat później</string>
+    <string name="later_6_7_years">6-7 lat później</string>
+    <string name="later_6_more_months">Ponad 6 miesięcy później</string>
+    <string name="later_8_9_years">8-9 lat później</string>
+    <string name="laughing">Śmiech</string>
+    <string name="minutes">Minuty</string>
+    <string name="other">"Inne: "</string>
+    <string name="right_time">Została przeprowadzona we właściwym czasie</string>
+    <string name="same_area">Ten sam obszar, co przed operacją</string>
+    <string name="seconds">Sekundy</string>
+    <string name="seeing_double">Widzenie podwójne</string>
+    <string name="shooting_less">Dalej rozdzierający, ale słabszy</string>
+    <string name="shooting_more">Dalej rozdzierający, ale silniejszy</string>
+    <string name="should_earlier">Powinna być zrobiona wcześniej</string>
+    <string name="should_later">Powinna być zrobiona później</string>
+    <string name="should_never">Nie powinna być przeprowadzona</string>
+    <string name="still_same">Jest wciąż taki sam</string>
+    <string name="still_there_improved">Wciąż jest, ale coraz bardziej łagodny</string>
+    <string name="talking">Rozmowa</string>
+    <string name="times_week_1_less">Mniej niż 1/tydzień</string>
+    <string name="times_week_2_3">2-3 razy na tydzień</string>
+    <string name="touch">Dotyk</string>
+    <string name="washing_face">Mycie twarzy</string>
+    <string name="watering">Wzmożone łzawienie</string>
+    <string name="weeks">Tygodnie</string>
+    <string name="wind">Wiatr</string>
+    <string name="yes_as_needed">Tak, gdy jest taka potrzeba</string>
+    <string name="yes_regularly">Tak, regularnie</string>
+    <string name="yes_same">Tak, jest tak samo jak wcześniej</string>
+    <string name="yes_worse">Tak, jest gorzej niż wcześniej</string>
+    <string name="bits_floating">\"Pływające muszki\"</string>
+    <string name="controlling_dentures">Z kontrolowaniem szczęki</string>
+    <string name="cryosurgery">Kirochirurgia</string>
+    <string name="dribbling">Z unikaniem gryzienia</string>
+    <string name="dull_achy">Jest tępy, ćmiący</string>
+    <string name="excessive_bitting">Z nadmiernym gryzieniem policzka</string>
+    <string name="glycerol_injection">Zastrzyk gliceryny</string>
+    <string name="microvascular">Mikronaczyniowe odbarczenie</string>
+    <string name="muscule_spasm">Ze skurczami mięśni</string>
+    <string name="termoregulation">Termoablacja o częstotliwości radiowej</string>
+    <string name="gamma_knife">Gamma knife</string>
+    <string name="rhizotomy">Posterior sensory rhizotomy</string>
+    <string name="baloon_compression">Baloon compression</string>
 </resources>
