--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name" translatable="false">NeuroSurvey</string>
     <string-array name="q1">
-        <item>@string/no</item>
+        <item>No - go to question 13</item>
         <item>@string/yes</item>
     </string-array>
 
@@ -31,7 +31,7 @@
 
     <string-array name="q4">
         <item>@string/no</item>
-        <item>@string/yes</item>
+        <item>Yes - go to question 7</item>
     </string-array>
 
     <string-array name="q5">
@@ -65,7 +65,7 @@
     </string-array>
 
     <string-array name="q10">
-        <item>@string/no</item>
+        <item>No - go to question 13</item>
         <item>Yes, as needed</item>
         <item>Yes, regularly</item>
     </string-array>
@@ -88,7 +88,7 @@
     </string-array>
 
     <string-array name="q13b">
-        <item>@string/no</item>
+        <item>No - go to question 17</item>
         <item>@string/yes</item>
     </string-array>
 
